[metadata]
name = funcache
version = 1.0.0
url = https://github.com/lapp0/funcache

author = lapp0

license = MIT
license_file = LICENSE

description = A function caching decorator with cache use conditionality

[options]
package_dir =
    = .
packages = find:
python_requires >= 3.5

[options.packages.find]
where = .
